RESOLVED FIXED164451
test262: DataView get methods should allow for missing offset, set methods should allow for missing value
https://bugs.webkit.org/show_bug.cgi?id=164451
Summary test262: DataView get methods should allow for missing offset, set methods sh...
Joseph Pecoraro
Reported 2016-11-05 09:32:40 PDT
Summary: DataView get methods should allow for missing offset, set methods should allow for missing value Yes, even though their length expects a value, it gracefully handles missing values. Steps to Reproduce: jsc> var buffer = new ArrayBuffer(8); jsc> var sample = new DataView(buffer, 0); jsc> sample.getUint8() => Throws exception. Should be the same as sample.getUint8(0), ToIndex(offset) would convert undefined to 0. jsc> sample.setUint8(0) => Throws exception. Should be the same as sample.setUint8(0, 0), ToNumber(value) would convert undefined to 0.
Attachments
[PATCH] Proposed Fix (31.87 KB, patch)
2016-11-05 09:34 PDT, Joseph Pecoraro
darin: review+
[PATCH] For Landing (31.87 KB, patch)
2016-11-10 15:12 PST, Joseph Pecoraro
buildbot: commit-queue-
Archive of layout-test-results from ews102 for mac-yosemite (954.00 KB, application/zip)
2016-11-10 16:11 PST, Build Bot
no flags
Archive of layout-test-results from ews115 for mac-yosemite (1.86 MB, application/zip)
2016-11-10 16:15 PST, Build Bot
no flags
Archive of layout-test-results from ews107 for mac-yosemite-wk2 (988.66 KB, application/zip)
2016-11-10 16:16 PST, Build Bot
no flags
[PATCH] For Landing (40.79 KB, patch)
2016-11-11 18:32 PST, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2016-11-05 09:34:19 PDT
Created attachment 293996 [details] [PATCH] Proposed Fix
Joseph Pecoraro
Comment 2 2016-11-10 15:12:22 PST
Created attachment 294420 [details] [PATCH] For Landing
Build Bot
Comment 3 2016-11-10 16:11:11 PST
Comment on attachment 294420 [details] [PATCH] For Landing Attachment 294420 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/2493483 New failing tests: webgl/1.0.2/conformance/typedarrays/data-view-test.html fast/canvas/webgl/data-view-test.html
Build Bot
Comment 4 2016-11-10 16:11:14 PST
Created attachment 294433 [details] Archive of layout-test-results from ews102 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 5 2016-11-10 16:15:07 PST
Comment on attachment 294420 [details] [PATCH] For Landing Attachment 294420 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/2493417 New failing tests: webgl/1.0.2/conformance/typedarrays/data-view-test.html fast/canvas/webgl/data-view-test.html
Build Bot
Comment 6 2016-11-10 16:15:11 PST
Created attachment 294434 [details] Archive of layout-test-results from ews115 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews115 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 7 2016-11-10 16:16:22 PST
Comment on attachment 294420 [details] [PATCH] For Landing Attachment 294420 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/2493504 New failing tests: webgl/1.0.2/conformance/typedarrays/data-view-test.html fast/canvas/webgl/data-view-test.html
Build Bot
Comment 8 2016-11-10 16:16:25 PST
Created attachment 294435 [details] Archive of layout-test-results from ews107 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Joseph Pecoraro
Comment 9 2016-11-10 17:46:49 PST
> New failing tests: > webgl/1.0.2/conformance/typedarrays/data-view-test.html > fast/canvas/webgl/data-view-test.html Looks like these tests need to be updated.
Joseph Pecoraro
Comment 10 2016-11-11 18:32:44 PST
Created attachment 294576 [details] [PATCH] For Landing
Joseph Pecoraro
Comment 11 2016-11-11 19:20:57 PST
Joseph Pecoraro
Comment 12 2016-11-12 00:21:00 PST
Follow-up fix for an ASSERT seen on the bots. I missed needing to converting an uncheckedArgument() to argument(): <https://trac.webkit.org/changeset/208643>
Note You need to log in before you can comment on or make changes to this bug.