test262: DataView get methods should allow for missing offset, set methods should allow for missing value https://bugs.webkit.org/show_bug.cgi?id=164451

Reviewed by Darin Adler.

JSTests:

* test262.yaml:

Source/JavaScriptCore:

* runtime/JSDataViewPrototype.cpp:
(JSC::getData):
Missing offset is still valid and will be coerced to 0.

(JSC::setData):
Missing value is still valid and will be coerced to 0.

LayoutTests:

* fast/canvas/webgl/data-view-test-expected.txt:
* fast/canvas/webgl/data-view-test.html:
Create a DataView large enough so that the get/set operations don't fail
due to out of bounds access, and assert that they do not throw, because
the undefined offset and value parameters get converted to 0.

* webgl/1.0.2/conformance/typedarrays/data-view-test-expected.txt:
This test is wrong. Leave the test alone but update our copy.

Canonical link: https://commits.webkit.org/182357@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208639 268f45cc-cd09-0410-ab3c-d52691b4dbfc