Source/JavaScriptCore/runtime/JSDataViewPrototype.cpp
@@ -129,10 +129,7 @@ EncodedJSValue getData(ExecState* exec)
     if (!dataView)
         return throwVMTypeError(exec, scope, ASCIILiteral("Receiver of DataView method must be a DataView"));
     
-    if (!exec->argumentCount())
-        return throwVMTypeError(exec, scope, ASCIILiteral("Need at least one argument (the byteOffset)"));
-    
-    unsigned byteOffset = exec->uncheckedArgument(0).toIndex(exec, "byteOffset");
+    unsigned byteOffset = exec->argument(0).toIndex(exec, "byteOffset");
     RETURN_IF_EXCEPTION(scope, encodedJSValue());
     
     bool littleEndian = false;
@@ -175,9 +172,6 @@ EncodedJSValue setData(ExecState* exec)
     if (!dataView)
         return throwVMTypeError(exec, scope, ASCIILiteral("Receiver of DataView method must be a DataView"));
     
-    if (exec->argumentCount() < 2)
-        return throwVMTypeError(exec, scope, ASCIILiteral("Need at least two argument (the byteOffset and value)"));
-    
     unsigned byteOffset = exec->uncheckedArgument(0).toIndex(exec, "byteOffset");
     RETURN_IF_EXCEPTION(scope, encodedJSValue());
 
@@ -187,7 +181,7 @@ EncodedJSValue setData(ExecState* exec)
         uint8_t rawBytes[dataSize];
     } u;
 
-    u.value = toNativeFromValue<Adaptor>(exec, exec->uncheckedArgument(1));
+    u.value = toNativeFromValue<Adaptor>(exec, exec->argument(1));
     RETURN_IF_EXCEPTION(scope, encodedJSValue());
     
     bool littleEndian = false;
